--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
         "eslint-plugin-react": "^7.14.3",
         "eslint-plugin-react-hooks": "^2.0.1",
         "next": "^9.0.5",
+        "prop-types": "^15.7.2",
         "react": "^16.9.0",
         "react-dom": "^16.9.0"
     },
